# ext-deps-generator

./: .gitignore  .gitmodules  README.md  build.linux.sh  build.mac.sh  build.windows.ps1
repositories/: build.hwloc.sh
scripts/linux/: build.brotli.sh  build.bzip2.sh  build.clipper2.sh  build.cppzmq.sh  build.cpu_features.sh  build.cryptopp-cmake.sh  build.freetype.sh  build.harfbuzz.sh  build.hwloc.sh  build.lib3mf.sh  build.libjpeg-turbo.sh  build.libpng.sh  build.libsamplerate.sh  build.libwebp.sh  build.libzip.sh  build.libzmq.sh  build.openal-soft.sh  build.taglib.sh  build.xz.sh  build.zlib.sh  build.zstd.sh
scripts/mac/: build.brotli.sh  build.bzip2.sh  build.clipper2.sh  build.cppzmq.sh  build.cpu_features.sh  build.cryptopp-cmake.sh  build.freetype.sh  build.harfbuzz.sh  build.hwloc.sh  build.lib3mf.sh  build.libjpeg-turbo.sh  build.libpng.sh  build.libsamplerate.sh  build.libwebp.sh  build.libzip.sh  build.libzmq.sh  build.openal-soft.sh  build.taglib.sh  build.xz.sh  build.zlib.sh  build.zstd.sh
scripts/windows/: build.brotli.ps1  build.bzip2.ps1  build.clipper2.ps1  build.cppzmq.ps1  build.cpu_features.ps1  build.cryptopp-cmake.ps1  build.freetype.ps1  build.harfbuzz.ps1  build.hwloc.ps1  build.lib3mf.ps1  build.libjpeg-turbo.ps1  build.libpng.ps1  build.libsamplerate.ps1  build.libwebp.ps1  build.libzip.ps1  build.libzmq.ps1  build.openal-soft.ps1  build.pthread-win32.ps1  build.taglib.ps1  build.xz.ps1  build.zlib.ps1  build.zstd.ps1
tests/: CMakeLists.txt
tests/src/: main.cpp
